--- a/01.Distributed_Systems.ipynb
+++ b/01.Distributed_Systems.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can add LB at each laer of system to utilize full scalability and redundancy\n",
+    "We can add LB at each layer of system to utilize full scalability and redundancy\n",
     "* User & Web Server\n",
     "* Webservers & internal server\n",
     "* Internal server - database"
@@ -92,7 +92,7 @@
    "source": [
     "### Types of Cache\n",
     "1. Application Server Cache\n",
-    "2. Distributed Cache - Consisten Hashing\n",
+    "2. Distributed Cache - Consistent Hashing\n",
     "3. Global Cache\n",
     "4. CDN - Content Distributed Network\n",
     " - serving from large amount of static media which is common to all"
@@ -111,12 +111,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Sharding/Data Partitioning\n",
-    "* break big Database into many smaller parts\n",
+    "* break big Database into many smaller parts (e.g: Slicing Pizza among six people)\n",
     "* this improves manageability, performance, availability and load balancing of application\n",
     "* after certain limit its cheaper to add more machines than by augmenting resource to existing machine"
    ]
