--- a/01.Distributed_Systems.ipynb
+++ b/01.Distributed_Systems.ipynb
@@ -16,6 +16,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Pizza Shop Example**\n",
+    "1. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load Balancers\n",
     "* one of the critical component of Distributed systems\n",
     "* spread traffic across various servers in the clusters to improve responsiveness, balance load, enhance availability of databases & applications,etc"
