--- a/Deployment to Production.ipynb
+++ b/Deployment to Production.ipynb
@@ -14,7 +14,7 @@
     "Follow the steps below for your assistance. We are open to other methods too.\n",
     "1. Build a big data pipeline for both stream processing and batch processing. You can refer to\n",
     "Lambda Architecture of Kafka.\n",
-    "2. Use MongoDB for your data storage (sinking and sourcing).\n",
+    "2. Use MongoDB for your data storage (sinking and sourcing)/Hadoop(HDFS).\n",
     "3. Build a CI/CD pipeline in 2 steps(Build,Tag) in Gitlab using the model API and tag the image in\n",
     "\":latest\" when you are on the master branch:\n",
     "i. Dockerize the API.\n",
