--- a/Twitter_Design.ipynb
+++ b/Twitter_Design.ipynb
@@ -68,7 +68,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"Image/Twitter.JPG\" width=\"600\" />"
+   ]
   }
  ],
  "metadata": {
@@ -87,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
