--- a/Big-Data.ipynb
+++ b/Big-Data.ipynb
@@ -61,6 +61,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**How Hadoop can store Unstructured data?**  \n",
+    "Data in HDFS is stored as files. Hadoop does not enforce on having a schema or a structure to the data that has to be stored. This allows using Hadoop for structuring any unstructured data and then exporting the semi-structured or structured data into traditional databases for further analysis.  \n",
+    "Data Replication. HDFS is designed to reliably store very large files across machines in a large cluster. It stores each file as a sequence of blocks; all blocks in a file except the last block are the same size. The blocks of a file are replicated for fault tolerance.\n",
+    "- NameNode\n",
+    "- Single Poing of Failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Big Data Architecture\n",
+    "https://www.xenonstack.com/blog/big-data-architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Big Data Architecture helps design the Data Pipeline with the various requirements of either the Batch Processing System or Stream Processing System. This architecture consists of 6 layers, which ensure a secure flow of data.\n",
+    "1. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**What is Apache Sqoop?**\n",
+    "\n",
+    "It efficiently transfers bulk data between Apache Hadoop and structured datastores such as relational databases. Apache Sqoop can also extract data from Hadoop and export it into external structured data stores.\n",
+    "\n",
+    "Apache Sqoop works with relational databases such as Teradata, Netezza, Oracle, MySQL, Postgres, and HSQLDB."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
