--- a/Pipeline_Big_Data.ipynb
+++ b/Pipeline_Big_Data.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Apache Spark**\n",
+    "# Apache Spark\n",
     "- best tool for data engineering  \n",
     "\n",
     "Advantages:  \n",
@@ -148,6 +148,74 @@
     "2. Spark Actions - extract meaningful information from massive dataset (1. Metrics, 2. Aggregate data to provide summaries, 3. Moving data to external systems like File system and databases)\n",
     "3. Spark Broadcast variables and accumulators - minimize data across network and generalize system wide metrics(1. Lookup tables, 2. Shared variables, 3. Summary Metrics, 4. Data Consolidation)\n",
     " \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How Spark Works? - Stages\n",
+    "1. Acquire Data\n",
+    "2. Create RDD\n",
+    "3. Transformation\n",
+    "4. Shuffle\n",
+    "5. Action to store\n",
+    "\n",
+    "<img src=\"Image/spark-transformation.JPG\" width=\"600\" />\n",
+    "\n",
+    "- No Shuffle - functions those run on individual records in the dataset independently do not create shuffle (e.g: Map, Filter, flatMap, mapPartitions)\n",
+    "- Shuffle Transformations - functions which require data to be consolidated in some fashion and cross referenced between RDDs for this consolidations (e.g: Distinct, groupByKey, reduceByKey, Join)\n",
+    "- Actions to move data from cluster back to single driver node - need to use minimal data to avoid huge network traffic (e.g: Reduce, Collect, Count, saveAsTextFile)\n",
+    "\n",
+    "Lazy Evaluation  \n",
+    "- Spark executes transformations only when an action is executed on the resulting RDDs\n",
+    "- Spark optimizes execution of all statements in the batch when it executes the action.\n",
+    "- The more statements to execute, the better the chance to optimize  \n",
+    "\n",
+    "\n",
+    "To take adv of Lazy Evaluation  \n",
+    "- execute code with action\n",
+    "- do as many transformations as possible before hitting an action\n",
+    "- avoid debugging statements like \"print count\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is Spark Dependencies?  \n",
+    "- When transformation is executed and a RDD is created from another RDD\n",
+    "- Does the transformation result in shuffle\n",
+    "    - Wide Dependency - Yes Shuffle (E.g: RDD13 need data from both worker node)\n",
+    "    - Narrow Dependency - No Shuffle (E.g: RDD11 -> RDD12)\n",
+    "    - Wide Dependency cause data to flow between worker node, which is expensive and time consuming\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Optimize for Dependencies?\n",
+    "- do as many Narrow Dependencies as possible before hitting a Wide Dependency\n",
+    "- try to group Wide Dep. together, possibly in a single function and do it once"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accumulators\n",
+    "- standard accumulator allow only single value like integer, string to pass around between driver programs and the nodes\n",
+    "- to pass multiple values like list, write your own accumulator implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Questions**\n",
+    "1. What is driver and executor in Spark?"
    ]
   },
   {
