--- a/Hadoop_A2Z.ipynb
+++ b/Hadoop_A2Z.ipynb
@@ -76,6 +76,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hive - Commands  \n",
+    "- describe formatted TABLENAME;\n",
+    "    - location of data\n",
+    "    - MANAGED_TABLE\n",
+    "- two kind of tables\n",
+    "    - managed - we dont have control where data will be stored\n",
+    "        - when you drop a table, data will go as well, it is managed by Hive only\n",
+    "    - external - we control where to store data\n",
+    "        - data wont be lost as Hive has no control over Hadoop\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- SQL is more optimized, we understand our data due to schema. So, if I have filter and join, I will push filter first to optimize my query. By default filter comes first.\n",
+    "- This is not possible in Spark, but Spark Sql may be possible.\n",
+    "- MapReduce also loads full file, so not optimized\n",
+    "- HTTP Response Code\n",
+    "    - 1xx (Informational Response)\n",
+    "    - 2xx (Sucess)\n",
+    "    - 3xx (Redirection)\n",
+    "    - 4xx (Client Error)\n",
+    "    - 5xx (Server Error)\n",
+    "-Hive built-in SerDe (serializer/deserializer)\n",
+    "    - create table if not exist and than store as text file using SerDe RegEx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IMPALA\n",
+    "- demon - impala d - run on all nodes\n",
+    "- has a shell, can fire a query, dont depend on Hive\n",
+    "- can see table in Hive\n",
+    "- it dont depend on MapReduce, Impala D run the query\n",
+    "- run query in-memory\n",
+    "- Impala query is not fault tolerant, but query is very fast. If one server fails, query will go and the job need ot be started again\n",
+    "- Regex not supported in IMPALA , so table created by Hive using regex - Impala cant run query on this table\n",
+    "- refresh need to be done manually\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Partitioning in Hive\n",
+    "- static and dynamic partitioning\n",
+    "    - the folder will be having lot of files for over a period of time\n",
+    "    - create a partitioning table with column is month\n",
+    "    - its useful when cardiniality(value) is very less\n",
+    "    - its effective in Hadoop but in Oracle its not very effective\n",
+    "        - suppose partitioning is on basis of country and data is in TB for US, in Hadoop query will run on many servers but in case of oracle its run on only one server\n",
+    "    - Static - we can partition suppose on country and region but these columns are not there\n",
+    "    - Dynamic - columns exist, dynamic partitioning is disable by default\n",
+    "    - we cant directly load data in Dynamic partitioning, first we need to load into table and than into partitioning table\n",
+    "    - While enabling dynamic partioning one static partition need to be created, check why?\n",
+    "    - Dynamic - Can put restriction on number of partition for safety\n",
+    "- Physical partitioning like if there is 100 rows divide into 5, this is impossible in RDBMS but possible in nosql as data is denormalized\n",
+    "- Drawbacks of Partitioning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bucketing in Hive\n",
+    "- divide data based on Hash value\n",
+    "- e.g: bucket = 10, 10 files will be created\n",
+    "- we can create bucketing without partitioning\n",
+    "- decide bucket size based on no. of block, dont make very small\n",
+    "- bucket joins - advantage- its faster\n",
+    "- mapper and reducer?\n",
+    "- reducer - when there is shuffle operation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "General facts:  \n",
+    "- Query results can be saved in Hadoop\n",
+    "- We can specify how to store data while creating table\n",
+    "- Data will be in text file format e.g: ORC (it has indexing with compression)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
