--- a/Hadoop_A2Z.ipynb
+++ b/Hadoop_A2Z.ipynb
@@ -165,7 +165,23 @@
     "General facts:  \n",
     "- Query results can be saved in Hadoop\n",
     "- We can specify how to store data while creating table\n",
-    "- Data will be in text file format e.g: ORC (it has indexing with compression)"
+    "- Data will be in text file format e.g: **ORC** (it has indexing with compression), Parquet, RC\n",
+    "- ORC - Vectorization, read thousands of Row in one time\n",
+    "- ORC - Drawback - it needs decompression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spark\n",
+    "- 2009 ->AMPLab Berkley -> MESOS (cluster manager similar to YARN)\n",
+    "- Spark was created to test Mesos, in-memory\n",
+    "- Spark programs was running faster than MapReduce\n",
+    "- 1.6 (Stable)\n",
+    "- 2.3 Latest\n",
+    "- It doesnt need Hadoop, can run independently\n",
+    "- Spark The Definite Guide"
    ]
   },
   {
