--- a/Hadoop_A2Z.ipynb
+++ b/Hadoop_A2Z.ipynb
@@ -185,6 +185,36 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"Image/hadoop_his.JPG\" width=\"600\" />\n",
+    "\n",
+    "- Machine Learning is iterative, for which Hadoop is not that good, is was very slow as it uses MapReduce\n",
+    "- Adv of Spark it can do all which above tools can do, so learning Spark is enough for all functions\n",
+    "- Creadit Card - identify transaction is fraud or not. In Spark streaming, we can do live processing but it cant do for each transaction. It can do batch processing say per sec. Apache Storm can do per transaction processing\n",
+    "\n",
+    "## Spark Architecture\n",
+    "<img src=\"Image/spark_arc.JPG\" width=\"400\" />\n",
+    "\n",
+    "\n",
+    "- Scheduling, Monitoring, Distributing\n",
+    "- Can control RAM, Harddisk\n",
+    "- Support 4 Languages - Scala, Java, Python or R\n",
+    "- Core Spark - like MapReduce\n",
+    "- We get libraries - SQL, Streaming, MLlib, GraphX\n",
+    "- Can read Hive table which is very fast, HIve is used as storage, and query is ran by Spark SQL\n",
+    "- Graph processing supported\n",
+    "- Neo4j - Database for Graphs\n",
+    "- Running Mode - locally, Mesos Clusters, Standalone Mode, Yarn - except locally all supports zookeeper, which ensures high availability\n",
+    "- No storage, its an execution engine\n",
+    "- Can also run on Kubernetes\n",
+    "- Can read from any File System, any DB\n",
+    "- E.g: Get data from Twitter, so if any server goes down chances of data loss will be there. So, we can use Flume with Kafka to avoid data loss from Twitter"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -208,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
