--- a/Hadoop_A2Z.ipynb
+++ b/Hadoop_A2Z.ipynb
@@ -259,7 +259,9 @@
     "**Issue with RDD**  \n",
     "- until Spark runs the code it dont know what to optimize\n",
     "- so we have Spark SQL to optimize the code\n",
-    "\n"
+    "\n",
+    "- E.g: #pyspark2 --master yarn --num-executers 3\n",
+    "- To check executors, config, etc -> #sc._conf.getALL()"
    ]
   },
   {
