--- a/Analytics_Hadoop_Spark.ipynb
+++ b/Analytics_Hadoop_Spark.ipynb
@@ -871,6 +871,327 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project\n",
+    "\n",
+    "- Student_scores.csv - Student, Subject, Class Score, Test Score\n",
+    "1. Load data into HDFS\n",
+    "    - Parquet file\n",
+    "    - GZIP codec\n",
+    "    - Choose ideal partitioning scheme base on downstream use cases\n",
+    "2. Compute Total Score for each student and subject\n",
+    "    - Total Score = Class Score + Test Score\n",
+    "    \n",
+    "3. Print Total Score for physics for each student\n",
+    "4. Compute Average total score for each student across all subjects\n",
+    "5. Find the Student with the highest score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 01. Read csv file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Read the raw CSV file int a Spark DataFrame\n",
+    "val rawStudentData = spark\n",
+    "                .read\n",
+    "                .option(\"inferSchema\", \"true\")\n",
+    "                .option(\"header\", \"true\")\n",
+    "                .csv(\"/user/raj_ops/raw_data/student_scores.csv\")\n",
+    "                .withColumnRenamed(\"Class Score\",\"ClassScore\")\n",
+    "                .withColumnRenamed(\"Test Score\",\"TestScore\");\n",
+    "\n",
+    "#Check Schema\n",
+    "rawStudentData.printSchema();\n",
+    "\n",
+    "#Check Data\n",
+    "rawStudentData.show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02. Create Partitioned HDFS Store\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Store CSV as Paraquet file in HDFS for better performance.\n",
+    "#Partition by Subject - provides limited list of partitions\n",
+    "\n",
+    "rawStudentData.write\n",
+    "            .format(\"parquet\")\n",
+    "            .mode(\"overwrite\")\n",
+    "            .option(\"compression\", \"gzip\")\n",
+    "            .partitionBy(\"Subject\")\n",
+    "            .save(\"/user/raj_ops/partitioned_student\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03. Read partitioned data into Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val studentData = spark.read\n",
+    "                    .parquet(\"/user/raj_ops/partitioned_student\")\n",
+    "\n",
+    "println(\"Partitions in student data : \" + studentData.rdd.getNumPartitions)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Partitions in student data : 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 04. Compute Total Score by Student and Subject"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Transform / Map operation to add up columns for each row\n",
+    "val totalScore = studentData.withColumn(\"TotalScore\", \n",
+    "                            studentData.col(\"ClassScore\") \n",
+    "                            + studentData.col(\"TestScore\"))\n",
+    "                            \n",
+    "totalScore.show(5)\n",
+    "\n",
+    "println(\"-------------------------------EXPLAIN------------------------------------\")\n",
+    "totalScore.explain\n",
+    "println(\"-------------------------------END EXPLAIN--------------------------------\\n\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "+-------+----------+---------+-------+------------------+\n",
+    "|Student|ClassScore|TestScore|Subject|        TotalScore|\n",
+    "+-------+----------+---------+-------+------------------+\n",
+    "|   Mike|      0.95|     2.37|   Math|3.3200000000000003|\n",
+    "|   Katy|      0.45|     1.79|   Math|              2.24|\n",
+    "|    Bob|      0.36|     2.37|   Math|              2.73|\n",
+    "|   Lisa|      0.33|     2.86|   Math|              3.19|\n",
+    "|   John|      0.27|      1.2|   Math|              1.47|\n",
+    "+-------+----------+---------+-------+------------------+\n",
+    "only showing top 5 rows\n",
+    "\n",
+    "-------------------------------EXPLAIN------------------------------------\n",
+    "== Physical Plan ==\n",
+    "*(1) Project [Student#54, ClassScore#55, TestScore#56, Subject#57, (ClassScore#55 + TestScore#56) AS TotalScore#63]\n",
+    "+- *(1) FileScan parquet [Student#54,ClassScore#55,TestScore#56,Subject#57] Batched: true, Format: Parquet, Location: InMemoryFileIndex[hdfs://sandbox-hdp.hortonworks.com:8020/user/raj_ops/partitioned_student], PartitionCount: 4, PartitionFilters: [], PushedFilters: [], ReadSchema: struct<Student:string,ClassScore:double,TestScore:double>\n",
+    "-------------------------------END EXPLAIN--------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 05. Print Total Score for Physics for all Students"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Filter use  case. This should trigger a filter pushdown for the subject partition\n",
+    "val physicsScore = totalScore.filter($\"Subject\" === \"Physics\")\n",
+    "\n",
+    "physicsScore.show()\n",
+    "\n",
+    "println(\"-------------------------------EXPLAIN------------------------------------\")\n",
+    "physicsScore.explain\n",
+    "println(\"-------------------------------END EXPLAIN--------------------------------\\n\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "+-------+----------+---------+-------+------------------+\n",
+    "|Student|ClassScore|TestScore|Subject|        TotalScore|\n",
+    "+-------+----------+---------+-------+------------------+\n",
+    "|   Mike|      0.48|     1.37|Physics|              1.85|\n",
+    "|   Katy|      0.34|     2.72|Physics|              3.06|\n",
+    "|    Bob|      0.93|     2.89|Physics|3.8200000000000003|\n",
+    "|   Lisa|      0.42|     2.34|Physics|              2.76|\n",
+    "|   John|      0.82|      2.8|Physics|3.6199999999999997|\n",
+    "+-------+----------+---------+-------+------------------+\n",
+    "\n",
+    "-------------------------------EXPLAIN------------------------------------\n",
+    "== Physical Plan ==\n",
+    "*(1) Project [Student#54, ClassScore#55, TestScore#56, Subject#57, (ClassScore#55 + TestScore#56) AS TotalScore#63]\n",
+    "+- *(1) FileScan parquet [Student#54,ClassScore#55,TestScore#56,Subject#57] Batched: true, Format: Parquet, Location: InMemoryFileIndex[hdfs://sandbox-hdp.hortonworks.com:8020/user/raj_ops/partitioned_student], PartitionCount: 1, PartitionFilters: [isnotnull(Subject#57), (Subject#57 = Physics)], PushedFilters: [], ReadSchema: struct<Student:string,ClassScore:double,TestScore:double>\n",
+    "-------------------------------END EXPLAIN--------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 06. Compute Average Total Score for each student across Subjects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Cache the totalScore data frame so TotalScore does not get recomputed each time\n",
+    "totalScore.cache()\n",
+    "\n",
+    "#Group by Key operation. \n",
+    "val avgScore = totalScore\n",
+    "                    .groupBy(\"Student\")\n",
+    "                    .avg(\"TotalScore\")\n",
+    "                    \n",
+    "avgScore.show()\n",
+    "\n",
+    "println(\"-------------------------------EXPLAIN------------------------------------\")\n",
+    "avgScore.explain\n",
+    "println(\"-------------------------------END EXPLAIN--------------------------------\\n\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "+-------+------------------+\n",
+    "|Student|   avg(TotalScore)|\n",
+    "+-------+------------------+\n",
+    "|    Bob|             3.015|\n",
+    "|   John|            2.8525|\n",
+    "|   Mike|            2.5975|\n",
+    "|   Lisa|2.3899999999999997|\n",
+    "|   Katy|             2.455|\n",
+    "+-------+------------------+\n",
+    "\n",
+    "-------------------------------EXPLAIN------------------------------------\n",
+    "== Physical Plan ==\n",
+    "*(2) HashAggregate(keys=[Student#54], functions=[avg(TotalScore#63)])\n",
+    "+- Exchange hashpartitioning(Student#54, 200)\n",
+    "   +- *(1) HashAggregate(keys=[Student#54], functions=[partial_avg(TotalScore#63)])\n",
+    "      +- InMemoryTableScan [Student#54, TotalScore#63]\n",
+    "            +- InMemoryRelation [Student#54, ClassScore#55, TestScore#56, Subject#57, TotalScore#63], true, 10000, StorageLevel(disk, memory, deserialized, 1 replicas)\n",
+    "                  +- *(1) Project [Student#54, ClassScore#55, TestScore#56, Subject#57, (ClassScore#55 + TestScore#56) AS TotalScore#63]\n",
+    "                     +- *(1) FileScan parquet [Student#54,ClassScore#55,TestScore#56,Subject#57] Batched: true, Format: Parquet, Location: InMemoryFileIndex[hdfs://sandbox-hdp.hortonworks.com:8020/user/raj_ops/partitioned_student], PartitionCount: 4, PartitionFilters: [], PushedFilters: [], ReadSchema: struct<Student:string,ClassScore:double,TestScore:double>\n",
+    "-------------------------------END EXPLAIN--------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 07. Find Top Student by Subject"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Find the top score for each subject\n",
+    "val topScore = totalScore.groupBy(\"Subject\")\n",
+    "                    .agg(max(\"TotalScore\").alias(\"TopScore\"))\n",
+    "\n",
+    "\n",
+    "topScore.show()\n",
+    "\n",
+    "#Find the student who scored the top score.\n",
+    "val topStudent = totalScore.as(\"a\")\n",
+    "                    .join(topScore.as(\"b\"), \n",
+    "                            $\"b.TopScore\" === $\"a.TotalScore\"\n",
+    "                            &&  $\"b.Subject\" === $\"a.Subject\"  )\n",
+    "                    .select(\"a.Subject\",\"a.Student\",\"TopScore\")\n",
+    "                    \n",
+    "topStudent.show()\n",
+    "\n",
+    "println(\"-------------------------------EXPLAIN------------------------------------\")\n",
+    "topStudent.explain\n",
+    "println(\"-------------------------------END EXPLAIN--------------------------------\\n\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "+---------+------------------+\n",
+    "|  Subject|          TopScore|\n",
+    "+---------+------------------+\n",
+    "|     Math|3.3200000000000003|\n",
+    "|Chemistry|3.1999999999999997|\n",
+    "|  Physics|3.8200000000000003|\n",
+    "|  Biology|              3.54|\n",
+    "+---------+------------------+\n",
+    "\n",
+    "+---------+-------+------------------+\n",
+    "|  Subject|Student|          TopScore|\n",
+    "+---------+-------+------------------+\n",
+    "|     Math|   Mike|3.3200000000000003|\n",
+    "|  Physics|    Bob|3.8200000000000003|\n",
+    "|Chemistry|   John|3.1999999999999997|\n",
+    "|  Biology|   Mike|              3.54|\n",
+    "+---------+-------+------------------+\n",
+    "\n",
+    "-------------------------------EXPLAIN------------------------------------\n",
+    "== Physical Plan ==\n",
+    "*(3) Project [Subject#57, Student#54, TopScore#210]\n",
+    "+- *(3) BroadcastHashJoin [TotalScore#63, Subject#57], [TopScore#210, Subject#253], Inner, BuildRight\n",
+    "   :- *(3) Filter (isnotnull(TotalScore#63) && isnotnull(Subject#57))\n",
+    "   :  +- InMemoryTableScan [Student#54, Subject#57, TotalScore#63], [isnotnull(TotalScore#63), isnotnull(Subject#57)]\n",
+    "   :        +- InMemoryRelation [Student#54, ClassScore#55, TestScore#56, Subject#57, TotalScore#63], true, 10000, StorageLevel(disk, memory, deserialized, 1 replicas)\n",
+    "   :              +- *(1) Project [Student#54, ClassScore#55, TestScore#56, Subject#57, (ClassScore#55 + TestScore#56) AS TotalScore#63]\n",
+    "   :                 +- *(1) FileScan parquet [Student#54,ClassScore#55,TestScore#56,Subject#57] Batched: true, Format: Parquet, Location: InMemoryFileIndex[hdfs://sandbox-hdp.hortonworks.com:8020/user/raj_ops/partitioned_student], PartitionCount: 4, PartitionFilters: [], PushedFilters: [], ReadSchema: struct<Student:string,ClassScore:double,TestScore:double>\n",
+    "   +- BroadcastExchange HashedRelationBroadcastMode(List(input[1, double, false], input[0, string, true]))\n",
+    "      +- *(2) Filter isnotnull(TopScore#210)\n",
+    "         +- *(2) HashAggregate(keys=[Subject#253], functions=[max(TotalScore#63)])\n",
+    "            +- Exchange hashpartitioning(Subject#253, 200)\n",
+    "               +- *(1) HashAggregate(keys=[Subject#253], functions=[partial_max(TotalScore#63)])\n",
+    "                  +- *(1) Filter isnotnull(Subject#253)\n",
+    "                     +- InMemoryTableScan [Subject#253, TotalScore#63], [isnotnull(Subject#253)]\n",
+    "                           +- InMemoryRelation [Student#250, ClassScore#251, TestScore#252, Subject#253, TotalScore#63], true, 10000, StorageLevel(disk, memory, deserialized, 1 replicas)\n",
+    "                                 +- *(1) Project [Student#54, ClassScore#55, TestScore#56, Subject#57, (ClassScore#55 + TestScore#56) AS TotalScore#63]\n",
+    "                                    +- *(1) FileScan parquet [Student#54,ClassScore#55,TestScore#56,Subject#57] Batched: true, Format: Parquet, Location: InMemoryFileIndex[hdfs://sandbox-hdp.hortonworks.com:8020/user/raj_ops/partitioned_student], PartitionCount: 4, PartitionFilters: [], PushedFilters: [], ReadSchema: struct<Student:string,ClassScore:double,TestScore:double>\n",
+    "-------------------------------END EXPLAIN--------------------------------"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
