--- a/Hadoop_A2Z.ipynb
+++ b/Hadoop_A2Z.ipynb
@@ -22,20 +22,25 @@
     "- User can connect through a Gateway or Hadoop Client, no direct access to Hadoop cluster\n",
     "- Its having NodeName (Master) and DataName(Slave). Slaves are on cheap hardware\n",
     "- Default lock size is 128MB\n",
+    "    - it can be increased for less metadata on NodeName server\n",
     "- ELT\n",
     "    - Extraction - For Strcutured Data (oracle, mysql) - Sqoop\n",
     "    - Apache Flume - For UnStructured Data (xml, json, flat file) - point-to-point data delivery tool, dont save any data\n",
     "    - Apache Kafka - can take data from Flume as Kafka producer should be present on source to get data, for Flume no such requirement\n",
     "- UnStructured Data -> Flume -> Kafka -> (HDFS for storage, Spark Streaming for real time processing)\n",
+    "    - take adv of features of Flume such as bucketing and event modification / routing, Kite SDK Morphline Integration, and NRT indexing with Cloudera Search\n",
     "- Spark Streaming/Flink/Storm\n",
     "    \n",
     "- Direct copy from oracle DB not allowed\n",
     "    - Oracle Golder Gate (Change Data Capture, CDC) - Capture data from replica logs, it provides changes in the data\n",
     "- MapReduce/Pig/HIVE/Spark for batch processing data in HDFS\n",
     "- Hive - sql query converts to program for MapReduce\n",
+    "    - How MapReduce takes care in event of server failure?\n",
     "- IMPALA/HAWQ,LLAP/PRESTO/DRILL/PHOENIX - for small query, in memory - can fail if its running on a server which goes off\n",
+    "    - in case of failure does it retry?\n",
     "- Hive - query wont fail if any server goes off\n",
     "- HBase is a Database on HDFS - random read/write DB - own language\n",
+    "    - Can we replace Oracle DB by this?\n",
     "- Phoenix - sql queries can be run, put on top of Hbase\n",
     "\n",
     "<img src=\"Image/hadoop.JPG\" width=\"600\" />"
@@ -262,6 +267,46 @@
     "\n",
     "- E.g: #pyspark2 --master yarn --num-executers 3\n",
     "- To check executors, config, etc -> #sc._conf.getALL()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Flume"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Link: https://blog.cloudera.com/flafka-apache-flume-meets-apache-kafka-for-event-processing/\n",
+    "**Example: Event Processing During Ingest**  \n",
+    "- Build a pipeline for performing arbitrary event processing. \n",
+    "- Flume provides a key component called the interceptor\n",
+    "- Interceptors have the following characteristics:\n",
+    "    - Inspect events as they pass between source and channel\n",
+    "    - Modify or drop events as required\n",
+    "    - Be chained together to form a processing pipeline\n",
+    "    - Execute any custom code within the event processing\n",
+    "- Can use Flume interceptors to do a variety of processing against incoming events as they pass through the system\n",
+    "- E.g: calculating a simple “Travel Score” -  to identify whether a banking customer is traveling while using their debit card\n",
+    "- Other use case of Interceptor:\n",
+    "    - Inspecting the content of the message for proper routing to a particular location such as by geo region\n",
+    "    - Calculating a streaming TopN list\n",
+    "    - Callout to a machine learning serving layer\n",
+    "    - Event enrichment / augmentation\n",
+    "    - In-flight data masking\n",
+    "    \n",
+    "- Note: For complex stream processing - Spark Streaming \n",
+    "    - Flume Interceptors provide a great way to process events with very low latency and minimal complexity. For per-event response latencies under 50 ms, building a custom application is the right choice\n",
+    "    \n",
+    "- To do any meaningful processing of the event as it arrives, you need to enrich the incoming transaction with information from your other systems\n",
+    "    - call Apache HBase to get additional values related to the transaction and modify the record to reflect the results of the processing performed by Interceptor\n",
+    "    <img src=\"Image/flume.JPG\" width=\"600\" /> \n",
+    "    - You can write your event directly to HDFS as before or back to Kafka, where the event could be picked up by other systems or for more comprehensive stream processing. In this case, you’ll return it directly back to Kafka so that the authorization result can be immediately returned to the client\n",
+    "    \n",
+    "- The Flume memory channel does not protect against data loss in the event of agent failure, and the when using the file channel, any data in a channel not yet written to a sink will be unavailable until the agent is recovered. The Kafka channel addresses both of these limitations."
    ]
   },
   {
