--- a/Pipeline_Big_Data.ipynb
+++ b/Pipeline_Big_Data.ipynb
@@ -123,9 +123,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Apache Kafka Connect**\n",
+    "# Apache Kafka Connect\n",
     "- scalable distributed pipeline for moving data\n",
     "- Data Source -> Kafka -> Data Sink"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"Image/kafka-connect.JPG\" width=\"600\" />\n",
+    "\n",
+    "\n",
+    "- No need to write code for custom publisher, use kafka connect to source data to Kafka Topic and again use kafka connect to transfer data to Data Sink\n",
+    "- open source\n",
+    "- Configuration driven and no coding required\n",
+    "- Scalability and parallelism\n",
+    "\n",
+    "**Connectors**\n",
+    "- Individual connectors for different source types(JDBC, HDFS, S3, etc)\n",
+    "- You can write your own connector as well and publish it as library\n",
+    "- Connector is a Jar file linked to Kafka connect\n",
+    "- Add connectors as required to your Kafka connect instance\n",
+    "\n",
+    "\n",
+    "**Tasks**\n",
+    "- Each specific publishing or sunscribing activity is configured as a task\n",
+    "- Tasks are configured - connector, data source/sink and parallelism\n",
+    "- One instance of Kafka Connect can have multiple connectors and multiple tasks for each connector\n",
+    "- "
    ]
   },
   {
