--- a/Pipeline_Big_Data.ipynb
+++ b/Pipeline_Big_Data.ipynb
@@ -151,7 +151,14 @@
     "- Each specific publishing or sunscribing activity is configured as a task\n",
     "- Tasks are configured - connector, data source/sink and parallelism\n",
     "- One instance of Kafka Connect can have multiple connectors and multiple tasks for each connector\n",
-    "- "
+    "\n",
+    "\n",
+    "**Workers**\n",
+    "- Workers actually execute tasks\n",
+    "- Instance/threads inside Kafka connect\n",
+    "- Standalone workers\n",
+    "- Distributed workers for redundancy and parallelism\n",
+    "- Can scale horizontally with kafka"
    ]
   },
   {
