--- a/Hadoop_A2Z.ipynb
+++ b/Hadoop_A2Z.ipynb
@@ -61,6 +61,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# YARN\n",
+    "The two main components of YARN are–\n",
+    "\n",
+    "- ResourceManager– This component receives processing requests and accordingly allocates to respective NodeManagers depending on processing needs.\n",
+    "- NodeManager– It executes tasks on each single Data Node"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Hive\n",
     "- provides SQL like interface to Hadoop\n",
     "- dont have storage\n",
@@ -307,6 +318,39 @@
     "    - You can write your event directly to HDFS as before or back to Kafka, where the event could be picked up by other systems or for more comprehensive stream processing. In this case, you’ll return it directly back to Kafka so that the authorization result can be immediately returned to the client\n",
     "    \n",
     "- The Flume memory channel does not protect against data loss in the event of agent failure, and the when using the file channel, any data in a channel not yet written to a sink will be unavailable until the agent is recovered. The Kafka channel addresses both of these limitations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Questions:\n",
+    "- What do you understand by Rack Awareness in Hadoop?\n",
+    "    - It is an algorithm applied to the NameNode to decide how blocks and its replicas are placed. Depending on rack definitions network traffic is minimized between DataNodes within the same rack. For example, if we consider replication factor as 3, two copies will be placed on one rack whereas the third copy in a separate rack.\n",
+    "\n",
+    "- What is the difference between “HDFS Block” and “Input Split”?\n",
+    "    - The HDFS divides the input data physically into blocks for processing which is known as HDFS Block. Input Split is a logical division of data by mapper for mapping operation.\n",
+    "    \n",
+    "-  What are the common input formats in Hadoop?\n",
+    "    - Below are the common input formats in Hadoop –\n",
+    "    - Text Input Format – The default input format defined in Hadoop is the Text Input Format.\n",
+    "    - Sequence File Input Format – To read files in a sequence, Sequence File Input Format is used.\n",
+    "    - Key Value Input Format – The input format used for plain text files (files broken into lines) is the Key Value Input Format.\n",
+    "    \n",
+    "- What are the different configuration files in Hadoop?\n",
+    "   - The different configuration files in Hadoop are –\n",
+    "\n",
+    "    - core-site.xml – This configuration file contains Hadoop core configuration settings, for example, I/O settings, very common for MapReduce and HDFS. It uses hostname a port.\n",
+    "\n",
+    "    - mapred-site.xml – This configuration file specifies a framework name for MapReduce by setting mapreduce.framework.name\n",
+    "\n",
+    "    - hdfs-site.xml – This configuration file contains HDFS daemons configuration settings. It also specifies default block permission and replication checking on HDFS.\n",
+    "\n",
+    "    - yarn-site.xml – This configuration file specifies configuration settings for ResourceManager and NodeManager.\n",
+    "    \n",
+    "- What is the use of jps command in Hadoop?\n",
+    "    - The jps command is used to check if the Hadoop daemons are running properly or not. This command shows all the daemons running on a machine i.e. Datanode, Namenode, NodeManager, ResourceManager etc.\n",
+    "    \n"
    ]
   },
   {
