--- a/01.Distributed_Systems.ipynb
+++ b/01.Distributed_Systems.ipynb
@@ -190,7 +190,7 @@
     "### Types of Cache\n",
     "1. **Application Server Cache**\n",
     "- cache on a request layer node enables the local storage of response data\n",
-    "- If applciation is on many nodes, than each node has its own cache\n",
+    "- If application is on many nodes, than each node has its own cache\n",
     "- as load balancer sends requests randomly to different nodes - increasing cache misses\n",
     "- two option to overcome this - Distributed and Global Cache\n",
     "2. **Distributed Cache** - Consistent Hashing\n",
@@ -479,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
