--- a/Hadoop_A2Z.ipynb
+++ b/Hadoop_A2Z.ipynb
@@ -24,7 +24,7 @@
     "- Default lock size is 128MB\n",
     "    - it can be increased for less metadata on NodeName server\n",
     "- ELT\n",
-    "    - Extraction - For Strcutured Data (oracle, mysql) - Sqoop\n",
+    "    - Extraction - For Structured Data (oracle, mysql) - Sqoop\n",
     "    - Apache Flume - For UnStructured Data (xml, json, flat file) - point-to-point data delivery tool, dont save any data\n",
     "    - Apache Kafka - can take data from Flume as Kafka producer should be present on source to get data, for Flume no such requirement\n",
     "- UnStructured Data -> Flume -> Kafka -> (HDFS for storage, Spark Streaming for real time processing)\n",
@@ -208,7 +208,7 @@
     "\n",
     "- Machine Learning is iterative, for which Hadoop is not that good, is was very slow as it uses MapReduce\n",
     "- Adv of Spark it can do all which above tools can do, so learning Spark is enough for all functions\n",
-    "- Creadit Card - identify transaction is fraud or not. In Spark streaming, we can do live processing but it cant do for each transaction. It can do batch processing say per sec. Apache Storm can do per transaction processing\n",
+    "- Credit Card - identify transaction is fraud or not. In Spark streaming, we can do live processing but it cant do for each transaction. It can do batch processing say per sec. Apache Storm can do per transaction processing\n",
     "\n",
     "## Spark Architecture\n",
     "<img src=\"Image/spark_arc1.JPG\" width=\"600\" />\n",
