--- a/Design_Patterns.ipynb
+++ b/Design_Patterns.ipynb
@@ -2,43 +2,51 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8b86e4c2",
+   "id": "1f28fe8b",
    "metadata": {},
    "source": [
     "Design patterns are reusable and general solutions to common problems that occur during software design and development. They are not specific to any particular programming language but provide templates or guidelines for structuring code to solve common problems efficiently. Using design patterns helps improve code readability, maintainability, and scalability. There are several categories of design patterns, and I'll briefly describe some of the most well-known ones:\n",
     "\n",
-    "## 1.Creational Patterns:##\n",
-    "        Singleton Pattern: Ensures that a class has only one instance and provides a global point of access to that instance.\n",
-    "        Factory Method Pattern: Defines an interface for creating an object but allows subclasses to alter the type of objects that will be created.\n",
-    "        Abstract Factory Pattern: Provides an interface for creating families of related or dependent objects without specifying their concrete classes.\n",
-    "        Builder Pattern: Separates the construction of a complex object from its representation, allowing the same construction process to create different representations.\n",
+    "## <font color='blue'>1.Creational Patterns:</font>\n",
+    "* **Singleton Pattern:** Ensures that a class has only one instance and provides a global point of access to that instance.\n",
+    "* **Factory Method Pattern:** Defines an interface for creating an object but allows subclasses to alter the type of objects that will be created.\n",
+    "* **Abstract Factory Pattern:** Provides an interface for creating families of related or dependent objects without specifying their concrete classes.\n",
+    "* **Builder Pattern:** Separates the construction of a complex object from its representation, allowing the same construction process to create different representations.\n",
     "\n",
-    "## 2. Structural Patterns:##\n",
-    "        Adapter Pattern: Allows the interface of an existing class to be used as another interface.\n",
-    "        Decorator Pattern: Attaches additional responsibilities to an object dynamically without altering its structure.\n",
-    "        Facade Pattern: Provides a simplified, unified interface to a set of interfaces in a subsystem.\n",
-    "        Bridge Pattern: Separates an object's abstraction from its implementation, so both can vary independently.\n",
+    "## <font color='blue'>2. Structural Patterns:</font>\n",
+    "* **Adapter Pattern:** Allows the interface of an existing class to be used as another interface.\n",
+    "* **Decorator Pattern:** Attaches additional responsibilities to an object dynamically without altering its structure.\n",
+    "* **Facade Pattern:** Provides a simplified, unified interface to a set of interfaces in a subsystem.\n",
+    "* **Bridge Pattern:** Separates an object's abstraction from its implementation, so both can vary independently.\n",
     "\n",
-    "    Behavioral Patterns:\n",
-    "        Observer Pattern: Defines a one-to-many dependency between objects so that when one object changes state, all its dependents are notified and updated automatically.\n",
-    "        Strategy Pattern: Defines a family of algorithms, encapsulates each one, and makes them interchangeable. Strategy lets the algorithm vary independently from clients that use it.\n",
-    "        Command Pattern: Encapsulates a request as an object, thereby allowing for parameterization of clients with queues, requests, and operations.\n",
-    "        Chain of Responsibility Pattern: Passes the request along a chain of handlers. Upon receiving a request, each handler decides either to process the request or to pass it to the next handler in the chain.\n",
+    "## <font color='blue'>3. Behavioral Patterns:</font>\n",
+    "* **Observer Pattern:** Defines a one-to-many dependency between objects so that when one object changes state, all its dependents are notified and updated automatically.\n",
+    "* **Strategy Pattern:** Defines a family of algorithms, encapsulates each one, and makes them interchangeable. Strategy lets the algorithm vary independently from clients that use it.\n",
+    "* **Command Pattern:** Encapsulates a request as an object, thereby allowing for parameterization of clients with queues, requests, and operations.\n",
+    "* **Chain of Responsibility Pattern:** Passes the request along a chain of handlers. Upon receiving a request, each handler decides either to process the request or to pass it to the next handler in the chain.\n",
     "\n",
-    "    Architectural Patterns:\n",
-    "        MVC (Model-View-Controller): Separates an application into three interconnected components: the Model (data and business logic), View (presentation and user interface), and Controller (handles user input and updates the Model and View).\n",
-    "        MVVM (Model-View-ViewModel): Similar to MVC but emphasizes a clear separation between the View and the underlying data using a ViewModel.\n",
-    "        Layered Architecture: Separates an application into distinct layers (presentation, business logic, data access) to improve modularity and maintainability.\n",
+    "## <font color='blue'>4. Architectural Patterns:</font>\n",
+    "* **MVC (Model-View-Controller):** Separates an application into three interconnected components: the Model (data and business logic), View (presentation and user interface), and Controller (handles user input and updates the Model and View).\n",
+    "* **MVVM (Model-View-ViewModel):** Similar to MVC but emphasizes a clear separation between the View and the underlying data using a ViewModel.\n",
+    "* **Layered Architecture:** Separates an application into distinct layers (presentation, business logic, data access) to improve modularity and maintainability.\n",
     "\n",
-    "    Concurrency Patterns:\n",
-    "        Producer-Consumer Pattern: Coordinates the operation of producers (which produce data) and consumers (which consume data) to avoid issues like data races and deadlocks.\n",
-    "        Mutex Pattern: Provides a way to ensure mutual exclusion of critical sections in multithreaded code.\n",
+    "## <font color='blue'>5. Concurrency Patterns:</font>\n",
+    "* **Producer-Consumer Pattern:** Coordinates the operation of producers (which produce data) and consumers (which consume data) to avoid issues like data races and deadlocks.\n",
+    "* **Mutex Pattern:** Provides a way to ensure mutual exclusion of critical sections in multithreaded code.\n",
     "\n",
-    "    Creational Patterns:\n",
-    "        Visitor Pattern: Represents an operation to be performed on the elements of an object structure. It lets you define a new operation without changing the classes of the elements.\n",
+    "## <font color='blue'>6. Creational Patterns:</font>\n",
+    "* **Visitor Pattern:** Represents an operation to be performed on the elements of an object structure. It lets you define a new operation without changing the classes of the elements.\n",
     "\n",
     "These design patterns provide proven solutions to recurring design problems and promote good software engineering practices. However, it's essential to choose the right pattern(s) based on the specific requirements of your software project."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b84f4782",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
